Fix problems when using generic font when the parent font is not generic but the closest ancestor with a generic font used the same generic.  Miscellaneous cleanup.  b=226871  r+sr=bzbarsky  a=brendan